syntax = "proto3";

package grreet;

option go_package = "greet/greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}
message GreatRequest { Greeting greeting = 1; }

message GreetResponse { string result = 1; }

message GreetManyTimesRequest { Greeting greeting = 1; }

message GreetManyTimesResponse { string result = 1; }

service GreetService {
  // Unary
  rpc Greet(GreatRequest) returns (GreetResponse) {};

  rpc GreetManyTimes(GreetManyTimesRequest)
      returns (stream GreetManyTimesResponse) {};
}